--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_login:
   double_back_to_close_app: ^2.0.1
   firebase_messaging: ^10.0.0
+  provider:
   flutter_local_notifications:
 
 dev_dependencies:
