--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   firebase_messaging: ^10.0.0
   provider:
   flutter_local_notifications:
+  http: ^0.13.3
 
 dev_dependencies:
   flutter_test:
